[package]
edition = '2018'
name = "lemon"
version = "0.2.0"
authors = ["Marc <marc.gluyas@gmail.com>"]
build = "build.rs"

[build-dependencies]
gl_generator = "0.13"

[dependencies]
glutin = "0.21"
cgmath = "0.17"
rand = "0.6"
bitflags = "1.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["mmsystem", "timeapi",] }
